[project]
name = "qbee-gpio"
version = "3.0.2"
description = "Control an LCD display and amplifier relay for use in an AirPlay and/or Spotify Connect Raspberry Pi server."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/qbee-gpio" }
scripts = { qbee = 'qbee_gpio:run' }
dependencies = [
    "asyncinotify >=4.0,<4.3 ; python_version < '4'",
    "concurrent-tasks >=1.7,<2",
    "zenconfig[yaml,attrs] >=2.1.0,<3",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest ==8.4.2",
    "pytest-asyncio ==1.2.0",
    "pytest-mock ==3.15.1",
    "ruff ==0.14.0",
    "mypy ==1.18.2",
    "pre-commit ==4.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.uv]
build-backend = { module-name = "qbee_gpio", module-root = "" }

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"
