[project]
name = "qbee_gpio"
version = "4.0.3"
description = "Control a display and amplifier relay for use in an AirPlay and/or Spotify Connect Raspberry Pi server."
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/qbee-gpio" }
dependencies = [
    "concurrent-tasks >=1.16.2,<2",
    "gpiozero >=2.0.1,<2.1",
    "zenconfig[yaml,pydantic] >=2.1.0,<3",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "mypy ==1.18.2",
    "pre-commit ==4.3.0",
    "pytest ==8.4.2",
    "pytest-asyncio ==1.2.0",
    "pytest-mock ==3.15.1",
    "ruff ==0.14.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.uv]
build-backend = { module-name = "qbee_gpio", module-root = "" }

[build-system]
requires = ["uv_build>=0.9.2,<0.10"]
build-backend = "uv_build"
