[project]
name = "qbee_gpio"
version = "4.0.4"
description = "Control a display and amplifier relay for use in an AirPlay and/or Spotify Connect Raspberry Pi server."
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/qbee-gpio" }
dependencies = [
    "concurrent-tasks ==1.16.3",
    "gpiozero ==2.0.1",
    "zenconfig[yaml,pydantic] ==2.2.0",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pre-commit ==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio ==1.3.0",
    "pytest-mock ==3.15.1",
    "ruff==0.14.9",
    "ty==0.0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT", "RUF", "UP"]
ignore = ["E501", "RUF001"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.uv]
build-backend = { module-name = "qbee_gpio", module-root = "" }

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[build-system]
requires = ["uv_build>=0.9.17,<0.10"]
build-backend = "uv_build"
